--- a/nft.css
+++ b/nft.css
@@ -20,7 +20,7 @@ body {
     top: 15px;
     left: 13px;
     border-radius: 5px;
-    background: url("/Image/image-equilibrium.jpg") no-repeat;
+    background: url("image-equilibrium.jpg") no-repeat;
     background-size: cover;
 }
 .text,
@@ -49,7 +49,7 @@ body {
     position: relative;
     top: 25px;
     left: 12px;
-    background: url("/Image/icon-ethereum.svg") no-repeat;
+    background: url("icon-ethereum.svg") no-repeat;
     background-size: cover;
     font-size: 15px;
     font-weight: 400;
@@ -58,7 +58,7 @@ body {
 .days {
     width: 5%;
     height: 5%;
-    background: url("/Image/icon-clock.svg") no-repeat;
+    background: url("icon-clock.svg") no-repeat;
     float: right;
     padding-right: 35%;
     position: relative;
@@ -75,7 +75,7 @@ hr {
 .ava {
     width: 4%;
     height: 4%;
-    background: url("/Image/image-avatar.png") no-repeat;
+    background: url("image-avatar.png") no-repeat;
     background-size: contain;
     border: 1px solid white;
     border-radius: 50%;
